standard/fastapi.yaml
# This manifest contains a FastAPI app that deploys a FastAPI app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: standard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
      tier: frontend
  template:
    metadata:
      labels:
        app: fastapi
        tier: frontend
    spec:
      containers:
      - name: fastapi
        image: tandiand/kubernetes-fastapi:0.0.1
        imagePullPolicy: "Always"
        ports: 
        - containerPort: 5000
          #hostPort: 80  # Explanation comment removed due to ambiguity
          name: fastapi-svc
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata: 
  name: fastapi
  labels:
    app: fastapi
    tier: frontend
spec:
  type: NodePort
  ports:
    - name: fastapi-svc
      protocol: TCP
      port: 80
      targetPort: 5000 
      nodePort: 30007 #a quoi sa sert permet de choisir un numéro de port  
      # Using a NodePort gives you the freedom to set up your own load balancing solution, to configure environments that are not fully supported by Kubernetes, or even to expose one or more nodes' IP addresses directly
  selector:
    app: fastapi
    tier: frontend
