standard/fastapi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: standard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: fastapi-secret
      hosts: 
        - microservice-kube.cours-devops.cloudns.ph
  rules:
  - host: microservice-kube.cours-devops.cloudns.ph
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 80
